[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/script/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/CollisionTile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://music/Wasted in outta Space App version.wav" type="AudioStream" id=6]
[ext_resource path="res://img/Galaxy.jpg" type="Texture" id=7]
[ext_resource path="res://Scenes/MainMenu.tscn" type="PackedScene" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Tile = ExtResource( 3 )
Bullet = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.5, 0.5 )

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 512 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MainMenu" parent="." instance=ExtResource( 8 )]

[node name="HUD" parent="." instance=ExtResource( 4 )]
[connection signal="ammo_change" from="Player" to="." method="_on_Player_ammo_change"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="shoot_bullet" from="Player" to="." method="_on_Player_shoot_bullet"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="sound_off" from="MainMenu" to="." method="_on_MainMenu_sound_off"]
[connection signal="sound_on" from="MainMenu" to="." method="_on_MainMenu_sound_on"]
[connection signal="start_game" from="MainMenu" to="." method="_on_MainMenu_start_game"]
